WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276162
Fix !ENABLE(MODERN_MEDIA_CONTROLS) build following
280586@main
, round two
https://bugs.webkit.org/show_bug.cgi?id=276162
Summary
Fix !ENABLE(MODERN_MEDIA_CONTROLS) build following 280586@main, round two
Ross Kirsling
Reported
2024-07-02 18:59:09 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Ross Kirsling
Comment 1
2024-07-02 19:04:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30425
EWS
Comment 2
2024-07-02 19:07:16 PDT
Committed
280607@main
(31e77e6ca86a): <
https://commits.webkit.org/280607@main
> Reviewed commits have been landed. Closing PR #30425 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-07-02 19:08:15 PDT
<
rdar://problem/131016461
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug