Fix !ENABLE(MODERN_MEDIA_CONTROLS) build following 280586@main, round two https://bugs.webkit.org/show_bug.cgi?id=276162

Unreviewed PlayStation build fix.

* Source/WebCore/style/UserAgentStyle.cpp:
(WebCore::Style::UserAgentStyle::ensureDefaultStyleSheetsForElement):
Apparently passing a StringImpl to makeString doesn't work, so restore the explicit String construction.

Canonical link: https://commits.webkit.org/280607@main